--- a/theme.scss
+++ b/theme.scss
@@ -75,6 +75,10 @@ h1 {
    border-bottom: 0px;
 }
 
+.centered-heading h2 {
+  text-align: center !important;
+}
+
 h2#toc-title {
   text-align: left;
 }
